--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Mohit Kumar",
   "license": "ISC",
   "dependencies": {
-    "env": "^0.0.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.4"
   },
